# matplotlib-qml

./: .gitignore  .gitlab-ci.yml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: documentation.yml
architecture/: index.html
base_classes/artist/: index.html
base_classes/axes_image/: index.html
base_classes/collection/: index.html
base_classes/collection_with_sizes/: index.html
base_classes/image_base/: index.html
base_classes/overview/: index.html
base_classes/patch/: index.html
base_classes/poly_collection/: index.html
base_classes/polygon/: index.html
base_classes/scalar_mappable/: index.html
components/annotation/: index.html
components/axes/: index.html
components/bar/: index.html
components/colorbar/: index.html
components/figure/: index.html
components/fill_between/: index.html
contribution/: index.html
doc/: README.md
docs/: architecture.md  contribution.md  event_system.md  index.md  installation.md  quickstart.md  read_the_docs.md  write_plugin.md
event_system/: index.html
examples/: Figure_example.qml  QaConnection.qml  README.md  SimpleGraph_example.qml  main.py  main.qml
installation/: index.html
quickstart/: index.html
read_the_docs/: index.html
search/: search_index.json
src/: Figure.qml  Plot.qml  PlotLine.qml  PlotScatter.qml  README.md  app_init.py  colorbar.py  event.py  factory.py  graphs_2d.py  init.py  init_matplotlib_bridge.py  plot_objects.py  plugin_loader.py  toolbar.py
tools/: class_generator.py
write_plugin/: index.html
(+61 files in other folders)
