[metadata]
name = matplotlib_bridge
version = 1.0.0
author = Nicklas Osmers
author_email = nosmers@qass.net
description = A bridge to render Matplotlib Figures in QML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.qass.net/qml-applications/matplotlib-bridge
project_urls =
    Bug Tracker = https://git.qass.net/qml-applications/matplotlib-bridge/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src