[metadata]
name = matplotlib_bridge
version = 0.1.1
author = Nicklas Osmers
author_email = nosmers@qass.net
description = A bridge to render Matplotlib Figures in QML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.qass.net/qml-applications/matplotlib-bridge
project_urls =
    Bug Tracker = https://git.qass.net/qml-applications/matplotlib-bridge/-/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
	matplotlib>=3.3.3
	numpy>=1.19.5
	PySide2
	matplotlib_backend_qtquick>=0.0.8
python_requires = >=3.6

[options.packages.find]
where = src